Bug 487638 -  status bar blames wrong resource when downloading slow responding resource

- Makes nsDocLoader store the last-sent status message for each request in the
corresponding nsRequestInfo, and keeps a flag to indicate whether the request
is done
- When a request finishes, it looks for a random request that is not done and
has a non-empty status, and if it finds one, sends that status message to the
listeners
- To make this all work, the patch also changes imagelib so that status and
state messages sent for images are sent with the imgIRequest as the request and
not the channel. This is necessary because the channel is not part of the
loadgroup for images, only the imgIRequest is.
- Make the BrowserStatusFilter always update its pending status message if it
  is dirty, even when that matches the currently displayed status message

r+sr=bz